# simple_sharepoint

./: README.md  pyproject.toml
py_simple_sharepoint/: __init__.py  test_it.py
simple_sharepoint/: __init__.py
