[project]
name = "py_simple_sharepoint"
version = "1.1.0"
description = "A SharePoint file management tool for python programs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.6",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# module name is the normalized project name (dash -> underscore)
module-name = "py_simple_sharepoint"  # folder to reference if src is not there
# module root "" = repo root (i.e., not using src/)
module-root = ""

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
